bootstrap from less

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -1,4 +1,13 @@
-.jumbotron h1 {
+.container {
   text-align: center;
   margin-bottom: 40px;
+}
+
+#badge {
+    color:#ECF0F1;
+    font-size:200%;
+}
+
+.quotes {
+    color:#95A5A6;
 }
