--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -10,7 +10,7 @@
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 
-      <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+      <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap.css")">
       <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-override.css")">
       <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app.css")">
       <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/nut_and_bolt.ico")">
@@ -25,28 +25,11 @@
 
       <script src="@routes.Assets.at("javascripts/testapp.js")" type="text/javascript"></script>
     </head>
-    <body>
+    <body background="@routes.Assets.at("images/texture/cartographer.png")">
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-          <div class="container">
-            <div class="navbar-header">                  
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".collapse-menu">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand">
-                <img src="@routes.Assets.at("images/promo.png")">
-                Play Akka Angular
-              </a>
-            </div>
-
-            <div class="collapse navbar-collapse collapse-menu">
-              <ul class="nav navbar-nav">
-               
-              </ul>              
-            </div>
-          </div>
+                <a class="navbar-brand" href="#">
+                    <i class="fa fa-eye fa-3x" id="badge" style></i>
+                </a>
         </div>
 
         <div class="container">
