--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -10,13 +10,10 @@
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 
-      <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap.css")">
-      <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-override.css")">
       <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app.css")">
-      <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/nut_and_bolt.ico")">
+      <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
       <script src="@routes.Assets.at("javascripts/routes")" type="text/javascript"></script>
       <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-      <!--<script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>-->
       <!-- Latest compiled and minified JavaScript -->
       <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
         <script src="http://code.angularjs.org/1.2.6/angular.min.js"></script>
@@ -26,15 +23,14 @@
       <script src="@routes.Assets.at("javascripts/testapp.js")" type="text/javascript"></script>
     </head>
     <body background="@routes.Assets.at("images/texture/cartographer.png")">
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-                <a class="navbar-brand" href="#">
-                    <i class="fa fa-eye fa-3x" id="badge" style></i>
-                </a>
-        </div>
 
-        <div class="container">
-          @content
-        </div>
+            <!--
+            <div class="navbar navbar-default navbar-fixed-top" id="main-navbar" role="navigation">
+                        <i class="fa  fa-arrows-alt fa-4x quotes" id=badge></i>
+            </div>     Fixed navbar -->
+
+
+            @content
 
         <div id="confirm"></div>
 
