--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -20,7 +20,7 @@
         <script src="http://code.angularjs.org/1.2.6/angular-animate.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 
-      <script src="@routes.Assets.at("javascripts/testapp.js")" type="text/javascript"></script>
+      <script src="@routes.AppController.testApp" type="text/javascript"></script>
     </head>
     <body background="@routes.Assets.at("images/texture/cartographer.png")">
 
