working auth with a jquery => angular hack

--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -27,9 +27,8 @@
             </form>
 
             <form class="form-inline" ng-submit="set_alias()" ng-if="!signup_complete()">
-                <input type="text" ng-model="alias" placeholder="pick a pseudonym"></input>
+                <input type="text" placeholder="pick a pseudonym" id="alias"></input>
             </form>
-
 
             <br>
             <ul class="list-group">
