--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -1,22 +1,9 @@
 @(user_id: String)
 
 @layout("Clockwork Semaphore") {
-<div class="container" ng-controller="AppCtrl">
-
+<div class="container" ng-controller="AppCtrl" ng-init="current_user = {id: '@{user_id}', alias: 'test alias'}">
 
     <div class="row">
-        <div class="col-md-3 col-xs-3">
-            <div class="list-group">
-                <a ng-repeat="trend in trending" ng-click="toggleActive(trend)" class="list-group-item">
-                    <i class="fa fa-circle-o" ng-if="!activeTopics[trend.name]"></i>
-                    <i class="fa fa-dot-circle-o" ng-if="activeTopics[trend.name]"></i>
-                    &nbsp;
-                    {{trend.name}}
-                    <span class="badge">{{trend.count}}</span>
-                </a>
-            </div>
-        </div>
-
         <div class="col-md-8 col-xs-8">
             <form class="form-inline" ng-submit="send()" ng-if="signup_complete()">
                 <i class="fa fa-quote-left fa-2x quotes"></i>
@@ -26,15 +13,15 @@
                 <i class="fa fa-quote-right fa-2x quotes"></i>
             </form>
 
-            <form class="form-inline" ng-submit="set_alias()" ng-if="!signup_complete()">
-                <input type="text" placeholder="pick a pseudonym" id="alias"></input>
+            <form class="form-inline" ng-submit="set_alias()" ng-if="!signup_complete()" >
+                <input type="text" placeholder="pick a pseudonym" id="alias">
+                <input type="submit" value="Submit">
             </form>
 
             <br>
+
             <ul class="list-group">
-                <li class="list-group-item" ng-repeat="message in messages | filter:activeFilter">
-                    <img class="img-rounded" alt="140x140" style="width: 40px; height: 40px;" ng-src="{{avatars[message.user_id]}}">
-                    <br>
+                <li class="list-group-item" ng-repeat="message in messages">
                     {{aliases[message.user_id]}}
                     <br>
                     {{message.msg}}
