--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -1,33 +1,104 @@
-@(user_id: String)
+@(user_id: String, user_alias: String, user_avatar_url: String)
 
 @layout("Clockwork Semaphore") {
-<div class="container" ng-controller="AppCtrl" ng-init="current_user = {id: '@{user_id}', alias: 'test alias'}">
+<div class="container" ng-controller="AppCtrl"
+     ng-init="init( '@user_id', {'@user_id':  {'alias': '@user_alias', 'avatar_url': '@user_avatar_url'}} )">
+
+
+
+    <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-6">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Hello {{ users[current_user].alias }}</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">???</a></li>
+                <li><a href="#">???</a></li>
+            </ul>
+        </div> /.navbar-collapse -->
+    </nav>
+
+
+
+
+
 
     <div class="row">
-        <div class="col-md-8 col-xs-8">
-            <form class="form-inline" ng-submit="send()" ng-if="signup_complete()">
-                <i class="fa fa-quote-left fa-2x quotes"></i>
-                &nbsp;
-                <input type="text" ng-model="text" placeholder="input message" class="message" id="tweeter"></input>
-                &nbsp;
-                <i class="fa fa-quote-right fa-2x quotes"></i>
-            </form>
 
-            <form class="form-inline" ng-submit="set_alias()" ng-if="!signup_complete()" >
-                <input type="text" placeholder="pick a pseudonym" id="alias">
-                <input type="submit" value="Submit">
-            </form>
 
-            <br>
-
-            <ul class="list-group">
-                <li class="list-group-item" ng-repeat="message in messages">
-                    {{aliases[message.user_id]}}
-                    <br>
-                    {{message.msg}}
+    <div class="col-md-4 col-xs-4">
+        <div>
+            <h2>Downloads</h2>
+            <ul class="downloads">
+                <li data-text="13.37 GB">
+                    Appliness
+                    <button class="fontawesome-download-alt"> get this file</button>
+                </li>
+                <li data-text="42 MB">
+                    Sublime Text
+                    <button class="fontawesome-download-alt"> get this file</button>
+                </li>
+                <li data-text="8 KB">
+                    Google Chrome
+                    <button class="fontawesome-download-alt"> get this file</button>
+                </li>
+                <li data-text="666 TB">
+                    Windows 9
+                    <button class="fontawesome-download-alt"> get this file</button>
                 </li>
             </ul>
         </div>
+    </div>
+
+
+    <div class="col-md-8 col-xs-8">
+    <form class="form-inline" ng-submit="send()" ng-if="signup_complete()">
+        <i class="fa fa-quote-left fa-2x quotes"></i>
+        &nbsp;
+        <input type="text" ng-model="text" placeholder="> input message" class="message" id="tweeter"></input>
+        &nbsp;
+        <i class="fa fa-quote-right fa-2x quotes"></i>
+    </form>
+
+    <form class="form-inline" ng-submit="set_alias()" ng-if="!signup_complete()" >
+        <input type="text" placeholder="pick a pseudonym" id="alias">
+        <input type="submit" value="Submit">
+    </form>
+
+    <br>
+
+
+        <div class="panel panel-default" ng-repeat="message in messages">
+            <div class="panel-heading">
+                <img ng-src="{{users[message.user_id].avatar_url}}" class="img-rounded">
+                {{ users[message.user_id].alias }}
+            </div>
+            <div class="panel-body">
+                {{ message.msg }}
+
+                <span class="offset1 span2 label pull-right">
+                    <br>
+                    <a class="btn" href="#" ng-if="message.user_id==current_user">
+                        <i class="fa fa-trash-o fa-lg"></i></a>
+                    <a class="btn" href="#" ng-if="message.user_id!=current_user">
+                        <i class="fa fa-star-o fa-lg"></i></a>
+                </span>
+            </div>
+        </div>
+
+
+
+    </div>
     </div>
 
 
