server-side favorites
store favorites server-side, send along with messages

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -5,8 +5,7 @@
 @concrete:#95A5A6;
 
 @asphalt:#34495E;
-
-
+@midnight-blue:#2C3E50;
 
 
 @belize-hole:#2980B9;
@@ -21,10 +20,22 @@
 @header-background:@peter-river;
 
 @border-width:1px;
-@border-color:@asphalt;
+@border-color:@midnight-blue;
+
+
 
 .panel-tweet {
-    border-color:@asphalt !important;
+    border-color:@midnight-blue !important;
+}
+
+.img-rounded{
+     border:1px solid @midnight-blue;
+}
+
+
+.fa-6 {
+    font-size:200%;
+    color:@midnight-blue !important;
 }
 
 
@@ -36,21 +47,21 @@
 
 .panel-heading {
     background-color:@header-background !important;
-    border-color:@asphalt !important;
+    border-color:@midnight-blue !important;
     color:@text-main !important;
 }
 
 
 #main-navbar {
     background-color:@header-background !important;
-    border-color:@asphalt !important;
+    border-color:@midnight-blue !important;
     color:@text-main !important;
 }
 
 
 .navbar-brand{
                  background-color:@header-background !important;
-                 border-color:@asphalt !important;
+                 border-color:@midnight-blue !important;
                  color:@text-main !important;
 }
 
