--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -32,9 +32,7 @@
 
 
 
-
 <div class="row">
-
 
 
     <div class="col-md-8 col-xs-8">
@@ -51,23 +49,29 @@
     <br>
 
 
-        <div class="panel panel-tweet" ng-repeat="message in messages">
-            <div class="panel-heading">
-                <img ng-src="{{users[message.user_id].avatar_url}}" class="img-rounded">
-                {{ users[message.user_id].alias }}
-            </div>
-            <div class="panel-body">
-                {{ message.msg }}
-
-                <span class="offset1 span2 label pull-right">
-                    <br>
-                    <a class="btn" href="#" ng-if="message.user_id==current_user">
-                        <i class="fa fa-trash-o fa-lg"></i></a>
-                    <a class="btn" href="#" ng-if="message.user_id!=current_user">
-                        <i class="fa fa-star-o fa-lg"></i></a>
-                </span>
-            </div>
+    <div class="panel panel-tweet" ng-repeat="message in messages">
+        <div class="panel-heading">
+            <img ng-src="{{users[message.user_id].avatar_url}}" class="img-rounded">
+            {{ users[message.user_id].alias }}
         </div>
+        <div class="panel-body">
+            {{ message.body }}
+            <span class="offset1 span2 label pull-right">
+            <br>
+            <a ng-click="delete_message(message)" ng-if="message.user_id==current_user">
+                <i class="fa fa-trash-o fa-6"></i></a>
+            <a ng-click="favorite_message(message)" ng-if="message.user_id!=current_user">
+                <i class="fa fa-star-o fa-6" ng-if="!message.favorite"></i>
+                <i class="fa fa-star fa-6" ng-if="message.favorite"></i>
+            </a>
+            <a ng-click="follow_user(message.user_id)" ng-if="message.user_id!=current_user">
+                <i class="fa fa-eye fa-6" ng-if="!following(message.user_id)"></i>
+                <i class="fa fa-eye-slash fa-6" ng-if="following(message.user_id)"></i>
+            </a>
+
+            </span>
+        </div>
+    </div>
 
 
 
