--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -14,10 +14,9 @@
       <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
       <script src="@routes.Assets.at("javascripts/routes")" type="text/javascript"></script>
       <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-      <!-- Latest compiled and minified JavaScript -->
+
       <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-        <script src="http://code.angularjs.org/1.2.6/angular.min.js"></script>
-        <script src="http://code.angularjs.org/1.2.6/angular-animate.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 
       <script src="@routes.Assets.at("javascripts/testApp.js")" type="text/javascript"></script>
