initial following users impl

--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -19,6 +19,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 
+      <script src="@routes.Assets.at("javascripts/reconnecting-websocket.js")" type="text/javascript"></script>
       <script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
     </head>
     <body background="@routes.Assets.at("images/texture/cartographer.png")">
