bug in getting posts from followed users, take care of later.

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -59,6 +59,14 @@
 }
 
 
+.navbar-default .navbar-nav > li > a  {
+    color:@text-main !important;
+}
+
+
+
+
+
 .navbar-brand{
                  background-color:@header-background !important;
                  border-color:@midnight-blue !important;
