--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -23,6 +23,7 @@
             <ul class="nav navbar-nav">
                 <li><a ng-click="recent_posts()">Recent Posts</a></li>
                 <li><a ng-click="followed_posts()">Followed Posts</a></li>
+                <li><a href="logout">Logout</a></li>
             </ul>
         </div>
     </nav>
@@ -49,6 +50,7 @@
     <div class="panel panel-tweet" ng-repeat="message in get_messages()">
         <div class="panel-heading">
             <img ng-src="{{get_user(message.user_id).avatar_url}}" class="img-rounded">
+            &nbsp
             {{ get_user(message.user_id).alias }}
         </div>
         <div class="panel-body">
@@ -56,15 +58,15 @@
             <span class="offset1 span2 label pull-right">
             <br>
             <a ng-click="delete_message(message)" ng-if="message.user_id==current_user">
-                <i class="fa fa-trash-o fa-6"></i></a>
+                <i class="fa fa-trash-o fa-6"  title="delete post"></i></a>
             <a ng-click="favorite_message(message)" ng-if="message.user_id!=current_user">
-                <i class="fa fa-star-o fa-6" ng-if="!message.favorite"></i>
-                <i class="fa fa-star fa-6" ng-if="message.favorite"></i>
+                <i class="fa fa-star-o fa-6" ng-if="!message.favorite"  title="favorite message"></i>
+                <i class="fa fa-star fa-6" ng-if="message.favorite" title="unfavorite message"></i>
             </a>
             &nbsp
             <a ng-click="follow_user(message.user_id)" ng-if="message.user_id!=current_user">
-                <i class="fa fa-eye fa-6" ng-if="!following(message.user_id)"></i>
-                <i class="fa fa-eye-slash fa-6" ng-if="following(message.user_id)"></i>
+                <i class="fa fa-eye fa-6" ng-if="!following(message.user_id)" title="follow user"></i>
+                <i class="fa fa-eye-slash fa-6" ng-if="following(message.user_id)" title="unfollow user"></i>
             </a>
 
             </span>
