replaced Msg socketmessage with makepost, pushpost messages

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -24,6 +24,16 @@
 
 
 
+input[type="text"], textarea {
+  background-color : @clouds !important;
+}
+
+input[type=submit] {
+  background-color : @clouds !important;
+}
+
+
+
 .panel-tweet {
     border-color:@midnight-blue !important;
 }
