--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -7,23 +7,10 @@
 
 
     <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-6">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Hello {{ get_user(current_user).alias }}</a>
-        </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
             <ul class="nav navbar-nav">
-                <li><a ng-click="recent_posts()">Recent Posts</a></li>
-                <li><a ng-click="followed_posts()">Followed Posts</a></li>
-                <li><a href="logout">Logout</a></li>
+                <li><a href="logout"><i class="fa fa-power-off fa-6"></i></a></li>
             </ul>
         </div>
     </nav>
