--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -21,6 +21,8 @@
 
       <script src="@routes.Assets.at("javascripts/reconnecting-websocket.js")" type="text/javascript"></script>
       <script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
+      <script src="@routes.Assets.at("javascripts/jquery.transit.min.js")" type="text/javascript"></script>
+
     </head>
     <body background="@routes.Assets.at("images/texture/cartographer.png")">
 
