--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -13,15 +13,16 @@
       <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app.css")">
       <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
       <script src="@routes.Assets.at("javascripts/routes")" type="text/javascript"></script>
-      <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 
-      <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+
 
       <script src="@routes.Assets.at("javascripts/reconnecting-websocket.js")" type="text/javascript"></script>
       <script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
       <script src="@routes.Assets.at("javascripts/jquery.transit.min.js")" type="text/javascript"></script>
+      <script src="@routes.Assets.at("javascripts/underscore-min.js")" type="text/javascript"></script>
+      <script src="@routes.Assets.at("javascripts/angular.min.js")" type="text/javascript"></script>
+      <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+      <script src="@routes.Assets.at("javascripts/jquery-2.1.0.min.js")" type="text/javascript"></script>
 
     </head>
     <body background="@routes.Assets.at("images/texture/cartographer.png")">
