--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -26,7 +26,7 @@ ng-init="init( '@user_id', {'@user_id': @user_json} )">
 
 <div class="row">
 
-    <div class="col-lg-3" ng-if="focus=='user-posts'">
+    <div class="col-md-3" ng-if="focus=='user-posts'">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <img ng-src="{{get_user(focused_user).avatar_url}}" class="img-rounded">
@@ -38,7 +38,7 @@ ng-init="init( '@user_id', {'@user_id': @user_json} )">
         </div>
     </div>
 
-    <div class="col-lg-9 col-centered">
+    <div class="col-md-6 col-md-offset-3">
     <form class="form-inline" ng-submit="send()" ng-if="signup_complete()">
         <textarea ng-model="text" class="form-control" placeholder="> input message" class="message" id="tweeter"></textarea >
         <br>
