--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -23,6 +23,11 @@
 @border-color:@midnight-blue;
 
 
+#tweet_column {
+  padding-right: 50%;
+  padding-left: 50%;
+}
+
 
 input[type="text"], textarea {
   background-color : @clouds !important;
