--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -23,6 +23,10 @@
       <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
       <script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
 
+    <link href="@routes.Assets.at("css/xeditable.css")" rel="stylesheet">
+    <script src="@routes.Assets.at("javascripts/xeditable.min.js")"></script>
+
+
     </head>
     <body background="@routes.Assets.at("images/texture/cartographer.png")">
 
