--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -4,10 +4,6 @@
 <div class="container" ng-controller="AppCtrl"
 ng-init="init( '@user_id', @user_json )">
 
-
-    <a href="#" editable-text="current_user" onaftersave="update_about_me()">{{ current_user }}</a>
-
-
     <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
@@ -37,14 +33,21 @@ ng-init="init( '@user_id', @user_json )">
                 {{ get_user(focused_user).alias }}
             </div>
             <div class="panel-body">
-            <!-- credit: a markov chain fed the works of william gibson care of loremgibson.com -->
-                Likes:
-                    <ul>Post-ironic hashtag vinyl</ul>
-                    <ul>Papier-mache computers</ul>
-                    <ul>Sub-orbital wonton soup</ul>
-                Dislikes
-                    <ul>Whatever swag</ul>
-                    <ul>Math-cartel marketing</ul>
+
+            <a class="preserve-whitespace" editable-textarea="get_user(focused_user).about_me"
+               ng-if="current_user==focused_user" onaftersave="update_about_me()">{{ get_user(focused_user).about_me }}</a>
+
+            <a class="preserve-whitespace" ng-if="current_user!=focused_user">{{ get_user(focused_user).about_me }}</a>
+            <!-- credit: a markov chain fed the works of william gibson care of loremgibson.com
+            Likes:
+                <ul>Post-ironic hashtag vinyl</ul>
+                <ul>Papier-mache computers</ul>
+                <ul>Sub-orbital wonton soup</ul>
+            Dislikes
+                <ul>Whatever swag</ul>
+                <ul>Math-cartel marketing</ul>
+            -->
+
             </div>
         </div>
     </div>
