--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -24,7 +24,7 @@
       <script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
 
     <link href="@routes.Assets.at("css/xeditable.css")" rel="stylesheet">
-    <script src="@routes.Assets.at("javascripts/xeditable.min.js")"></script>
+    <script src="@routes.Assets.at("javascripts/xeditable.js")"></script>
 
 
     </head>
