tweak css: word wrap for non-edit about me panel

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -26,7 +26,8 @@
 
 
 .preserve-whitespace{
-    white-space: pre !important;
+    white-space: pre-wrap !important;
+    word-wrap: break-word !important;
 }
 
 
