working login flow
index and websocket auth'd via github and play authentication framework,
ugly but functional

--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -16,7 +16,7 @@ ng-init="init( '@user_id', @user_json )">
             </li>
         </ul>
     </div>
-</nav>
+    </nav>
 
 
 
@@ -97,4 +97,5 @@ ng-init="init( '@user_id', @user_json )">
 
 
 </div>
+<script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
 }
