Implementing Google Oauth
I'm going to fucking murder something

--- a/app/views/app/login.scala.html
+++ b/app/views/app/login.scala.html
@@ -8,8 +8,9 @@
     </nav>
 
 
-    <a href="login">login with github!<i class="fa fa-github fa-6"></i></a>
+    <a href="github/login">login with github!<i class="fa fa-github fa-6"></i></a>
 
+    <a href="google/login">login with google!<i class="fa fa-google fa-6"></i></a>
 
 
    <script>
