refactor to use redis schema from redis twitter case study article

--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -1,6 +1,6 @@
 @(title: String)(implicit content: Html = Html(""))
 <!DOCTYPE html>
-<html ng-app="app">
+<html>
     <head>
       <title>@title</title>
       <!-- Latest compiled and minified CSS -->
