--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -1,7 +1,7 @@
 @(user_id: String, user_json: String)
 
 @layout("Clockwork Semaphore") {
-<div class="container" ng-controller="AppCtrl"
+<div class="container" ng-controller="AppCtrl" ng-app="app"
 ng-init="init( '@user_id', @user_json )">
 
     <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
